# apifirst-server/src/main/java/com/rperezv365/apifirst/apifirstserver/domain/Product.java
@@ -47,7 +47,7 @@ public class Product {
     @ManyToMany
     private List<Category> categories;
 
-    @OneToMany(mappedBy = "product")
+    @OneToMany(mappedBy = "product", cascade = CascadeType.ALL, fetch = FetchType.EAGER)
     private List<Image> images;
 
     @NotNull
@@ -62,4 +62,17 @@ public class Product {
 
     @UpdateTimestamp
     private OffsetDateTime dateUpdated;
+
+    public static class ProductBuilder {
+        public Product build() {
+            Product product = new Product(this.id, this.description, this.dimensions, this.categories, this.images, this.price, this.cost, this.dateCreated, this.dateUpdated);
+
+            if (this.images != null) {
+                this.images.forEach(i -> i.setProduct(product));
+            }
+
+            return product;
+        }
+    }
+
 }
